--- a/footer.html
+++ b/footer.html
@@ -35,26 +35,19 @@
                     <div class="widget widget_links">
                         <h2 class="widget-title"><span>COMPANY LINKS</span></h2>
 
-                        <ul class="wprt-links clearfix col2">
-                            <li class="style-2"><a href="#">About Us</a></li>
-                            <li class="style-2"><a href="#">Services</a></li>
-                            <li class="style-2"><a href="#">Awards</a></li>
-                            <li class="style-2"><a href="#">Our Offers</a></li>
-                            <li class="style-2"><a href="#">Community</a></li>
-                            <li class="style-2"><a href="#">History</a></li>
-                            <li class="style-2"><a href="#">Events</a></li>
-                            <li class="style-2"><a href="#">Offices</a></li>
-                            <li class="style-2"><a href="#">FAQs</a></li>
-                            <li class="style-2"><a href="#">Our Gallery</a></li>
-                            <li class="style-2"><a href="#">Contact Us</a></li>
-                            <li class="style-2"><a href="#">Shop</a></li>
+                        <ul >
+                            <li class="style-2"><a href="about.php">About Us</a></li>
+                            <li class="style-2"><a href="services.php">Services</a></li>
+                            <li class="style-2"><a href="desgin.php">Design</a></li>
+                            <li class="style-2"><a href="page-contact.php">Contact Us</a></li>
                         </ul>
                     </div><!-- /.widget_links -->
                 </div><!-- /.span_1_of_4 -->
 
                 <div class="span_1_of_4 col">
                     <div class="widget widget_instagram">
-                        <h2 class="widget-title"><span>Instagram Feed</span></h2>
+                        <h2 class="widget-title"><span>Facebook
+                             Feed</span></h2>
 
                         <div class="instagram-wrap clearfix col3 g12">
                             <div class="instagram_badge_image">
@@ -145,7 +138,7 @@
             <div class="bottom-bar-inner-wrap">
                 <div class="bottom-bar-content">
                     <div id="copyright">
-                        &copy; ecostruct - Design by @ecostruct with Love. All Rights Reserved.
+                        &copy; ecostruct - Design by @ecostruct. All Rights Reserved.
                     </div><!-- /#copyright -->
                 </div><!-- /.bottom-bar-content -->
 
